--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="hero-image">
 	<div class="container">
-      <h1 class="heading">Зубович Юлиана Леонидовна</h1>
+      <h1 class="heading">Неопознанный Жираф</h1>
       <p>Junior верстальщик</p>
 	  </div>
     </section>
